change: fixed scrollbar

--- a/css/global.css
+++ b/css/global.css
@@ -31,6 +31,7 @@ body {
 /* scroll bar width */
 ::-webkit-scrollbar {
   width: 10px;
+  position: absolute;
 }
 
 ::-webkit-scrollbar-track{
